--- a/CalendarScheduler.csproj
+++ b/CalendarScheduler.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
+	<PropertyGroup>
+		<LangVersion Condition="'$(MSBuildProjectExtension)'=='.csproj'">preview</LangVersion>
+	</PropertyGroup>
+	<PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
